--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,24 @@ a{
     text-decoration-line: none;
 }
 
+h1,
+h2,
+h3 {
+    text-align: center;
+    margin: 0 auto;
+}
+
+ul {
+    margin: 0 auto;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+p{
+    margin: 0 auto;
+}
+
 .logo,
 .logo-foot{
     color: var(--accent-color);
@@ -60,20 +78,28 @@ a{
     color: var(--main-color);
 }
 
-/* Head */
-
-.action,
-.page-foot{
-    background-color: #2F303A;
+.container {
+    width: 1200px;
+    margin: 0 auto;
 }
 
-.action-title{
+/* Head */
+
+.hero{
+    background-color: #2F303A;
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.hero-title{
     color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-bottom: 30px;
 }
 
 button{
@@ -81,33 +107,32 @@ button{
 }
 
 .button{
+    border-radius: 4px;
+    border-color: transparent;
+    padding: 10px 32px;
     background-color: var(--accent-color);
     color: var(--white-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     font-size: 16px;
-    line-height: 1.87;
-    display: flex;
-    align-items: center;
-    text-align: center;
+    line-height: 1.87;    
     letter-spacing: 0.06em;
     cursor: pointer;
+    min-width: 216px;
 }
 
 /* Features */
 
 .visually-hidden{
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+   display: none;
+}
+
+.feature{
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .feature-title{
+    margin-bottom: 10px;
     color: var(--title-text-color);
     font-size: 14px;
     line-height: 1.14;
@@ -120,14 +145,21 @@ button{
 
 /* work */
 
+.work{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .section-title{
     color: var(--title-text-color);
     font-size: 36px;
     line-height: 1.17;
+    margin-bottom: 50px;
 }
 
 .team{
     background-color: #F5F4FA;
+    padding: 94px 215px;
 }
 
 .team-list .title{
@@ -135,15 +167,20 @@ button{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-
+    margin-bottom: 10px;
 }
 
 .team-list .text{
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+    margin-bottom: 30px;
 }
 /* foot */
+
+.page-foot {
+    background-color: #2F303A;
+}
 
 .logo-foot .accent-foot{
     color: var(--white-color);
@@ -192,14 +229,4 @@ address{
     line-height: 1.88;
 }
 
-h1, h2{
-    text-align: center;
-    margin: 0;
-}
 
-ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-}
