--- a/css/styles.css
+++ b/css/styles.css
@@ -16,26 +16,27 @@ body{
 
 /* Nav */
 
-a{
-    text-decoration-line: none;
-}
-
 h1,
 h2,
 h3 {
     text-align: center;
-    margin: 0 auto;
+    margin: 0;
 }
 
 ul {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     list-style: none;
-    display: flex;
 }
 
-p{
-    margin: 0 auto;
+.main-nav{
+    display: flex;
+    align-items: center;
+}
+
+.container {
+    width: 1200px;
+    margin: auto;
 }
 
 .logo,
@@ -45,19 +46,34 @@ p{
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
+    text-decoration-line: none;
 }
 
 .accent-head{
     color: #000000;
 }
 
+.site-nav{
+    display: flex;
+    margin-left: 93px;
+}
+
+.site-nav .item + .item {
+    margin-left: 50px;
+}   
+
 .site-nav .link,
 .contact .link{
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    text-decoration-line: none;
 }
 .site-nav .link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     color: var(--title-text-color);
 }
 
@@ -74,25 +90,33 @@ p{
     color: var(--accent-color);
 }
 
+.contact{
+    display: flex;
+    margin-left: auto;
+}
+
+.contact .item + .item {
+    margin-left: 50px;
+}
+
 .contact .link{
     color: var(--main-color);
 }
 
-.container {
-    width: 1200px;
-    margin: 0 auto;
-}
 
 /* Head */
 
 .hero{
-    background-color: #2F303A;
-    text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
+
+    background-color: #2F303A;
+    text-align: center; 
 }
 
 .hero-title{
+    margin-bottom: 30px;
+
     color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
@@ -189,14 +213,17 @@ button{
 address{
     font-style: inherit;
 }
+
 .contact-foot .link{
     color: rgba(255, 255, 255, 0.6);
     line-height: 1.71;
+    text-decoration-line: none;
 }
 
 .contact-foot .map{
     color: var(--white-color);
     line-height: 1.71;
+    text-decoration-line: none;
 }
 
 /* Portfolio */
