--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,11 @@ ul {
     list-style: none;
 }
 
+p {
+    margin: 0;
+    padding: 0;
+}
+
 .main-nav{
     display: flex;
     align-items: center;
@@ -201,7 +206,8 @@ button{
 
 .team{
     background-color: #F5F4FA;
-    padding: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .team-list{
@@ -212,6 +218,9 @@ button{
     margin-left: 30px;
 }
 
+.team-list .item{
+    background-color: var(--white-color);
+}
 .team-list .title{
     color: var(--title-text-color);
     font-weight: 500;
@@ -230,6 +239,8 @@ button{
 
 .page-foot {
     background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .logo-foot .accent-foot{
@@ -239,6 +250,7 @@ button{
 address{
     font-style: inherit;
 }
+
 
 .contact-foot .link{
     color: rgba(255, 255, 255, 0.6);
@@ -250,16 +262,27 @@ address{
     color: var(--white-color);
     line-height: 1.71;
     text-decoration-line: none;
+    margin-top: 20px;
+    margin-bottom: 9px;
 }
 
 /* Portfolio */
 
 .filters{
     display: flex;
-    
+    align-items: center; 
+    margin-bottom: 50px;
+    justify-content: center;    
+}
+
+.filters .item + .item {
+    margin-left: 8px;
 }
 
 .button-filters{
+    padding-top: 6px 22px;
+    border-radius: 4px;
+    border-color: transparent;
     background-color: #F5F4FA;
     color: var(--title-text-color);
     font-weight: 500;
@@ -267,6 +290,7 @@ address{
     line-height: 1.63;
     text-align: center;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 .button-filters:hover,
@@ -280,11 +304,38 @@ address{
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin: 20px 24px 4px;
+    text-align: left;
 }
 
 .card .text{
     font-size: 16px;
     line-height: 1.88;
+    margin: 4px 24px 20px;
 }
 
+.portfolio{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
+.card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;    
+}
+
+.card .item{
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
+}
+
+.card .item:nth-child(3n) {
+    margin-right: 0;
+}  
+
+.card .item:nth-last-child(-n + 3){
+    margin-bottom: 0;
+}
