--- a/css/styles.css
+++ b/css/styles.css
@@ -362,10 +362,10 @@ address{
 .card-text{
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
+    border-top: none;
 }
 
 .card .item{
-    width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
 }
